fix: broken style in 404 page

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -24,7 +24,7 @@
   --muted-border-color: rgb(51, 51, 51);
 }
 
-body {
+.body {
   background-color: var(--background-color);
   word-break: break-all;
 }
